--- a/app/src/main/res/layout/activity_detalles_reporte.xml
+++ b/app/src/main/res/layout/activity_detalles_reporte.xml
@@ -1,4 +1,5 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView android:id="@+id/fondo_view"
+            xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -51,14 +52,12 @@
 			android:id="@+id/lblDetalleObservacion"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignEnd="@+id/lblFecha"
 			android:layout_alignParentLeft="true"
 			android:layout_alignParentStart="true"
-			android:layout_alignRight="@+id/lblFecha"
 			android:layout_below="@+id/lblObservacion"
 			android:maxLines="8"
 			android:singleLine="false"
-			android:text="A pesar del malestar que tiene, el paciente se encuentra alegre y motivado por las clases de baile. A pesar del malestar que tiene, el paciente se encuentra alegre y motivado por las clases de baile."
+			android:text="A pesar del malestar que tiene"
 			android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 		<TextView
@@ -77,12 +76,12 @@
 			android:id="@+id/lblDetalleSugerencia"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignEnd="@+id/lblDetalleObservacion"
-			android:layout_alignRight="@+id/lblDetalleObservacion"
+			android:layout_alignParentLeft="true"
+			android:layout_alignParentStart="true"
 			android:layout_below="@+id/lblSugerencias"
 			android:maxLines="8"
 			android:singleLine="false"
-			android:text="A pesar del malestar que tiene, el paciente se encuentra alegre y motivado por las clases de baile. A pesar del malestar que tiene, el paciente se encuentra alegre y motivado por las clases de baile."
+			android:text="A pesar del malestar que tiene..."
 			android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 		<TextView
@@ -101,8 +100,8 @@
 			android:id="@+id/lblNombreDoctor"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignEnd="@+id/lblDetalleObservacion"
-			android:layout_alignRight="@+id/lblDetalleObservacion"
+			android:layout_alignParentEnd="true"
+			android:layout_alignParentRight="true"
 			android:layout_below="@+id/lblSupervisadoPor"
 			android:maxLines="8"
 			android:singleLine="false"
