--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -3,4 +3,9 @@
 		 (such as screen margins) for screens with more than 820dp of available width. This
 		 would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
 	<dimen name="activity_horizontal_margin">64dp</dimen>
+
+	<!-- NavigationView Dimensiones -->
+	<dimen name="header_left_padding">16dp</dimen>
+	<dimen name="header_height">192dp</dimen>
+	<dimen name="perfil_image_size">64dp</dimen>
 </resources>
