--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -11,6 +11,10 @@
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+	<!-- android:background="?attr/colorPrimary" -->
+
+
+
 
     <!-- Este es nuestro fragment -->
     <RelativeLayout
