--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,5 +6,6 @@
 	<style name="AppTheme" parent="Base.AppTheme">
 		<item name="android:windowDrawsSystemBarBackgrounds">true</item>
 		<item name="android:statusBarColor">@android:color/transparent</item>
+		<item name="android:windowTranslucentNavigation">true</item>
 	</style>
 </resources>
