--- a/app/src/main/res/layout/activity_el_tata_main.xml
+++ b/app/src/main/res/layout/activity_el_tata_main.xml
@@ -6,6 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
+	android:clipToPadding="false"
 	tools:context=".ui.ElTataMainActivity">
 
 	<!--
@@ -26,6 +27,7 @@
 		android:layout_gravity="start"
 		android:fitsSystemWindows="true"
 		app:headerLayout="@layout/nav_header"
-		app:menu="@menu/nav_menu" />
+		app:menu="@menu/nav_menu"
+		android:background="@color/background_psicologico"/>
 
 </android.support.v4.widget.DrawerLayout>
