--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<!-- TODO: Quitar estos colores -->
 	<color name="color_geriatrico" >#f9b492</color>
 	<color name="color_fisiologico">#05aaff</color>
 	<color name="color_psicologico">#df6aff</color>
 	<color name="color_nutricional">#58eb88</color>
+
+
 
 	<color name="barra_geriatrico" >#795548</color>
 	<color name="barra_fisiologico">#2196f3</color>
 	<color name="barra_psicologico">#9c27b0</color>
 	<color name="barra_nutricional">#4caf50</color>
 
-	<color name="barra_dark_geriatrico" >#5d4037</color>
-	<color name="barra_dark_fisiologico">#1976d2</color>
-	<color name="barra_dark_psicologico">#7b1fa2</color>
-	<color name="barra_dark_nutricional">#388e3c</color>
+	<color name="barra_dark_geriatrico" >#aa5d4037</color>
+	<color name="barra_dark_fisiologico">#aa1976d2</color>
+	<color name="barra_dark_psicologico">#aa7b1fa2</color>
+	<color name="barra_dark_nutricional">#aa388e3c</color>
 
 	<color name="listitem_geriatrico" >#bcaaa4</color>
 	<color name="listitem_fisiologico">#90caf9</color>
@@ -26,10 +29,10 @@
 	<color name="background_nutricional">#c8e6c9</color>
 
 	<!-- NavigationView Menu Colors -->
-	<color name="window_background">#FFF5F5F5</color>
-	<color name="primaryColor">#346D7D</color>
-	<color name="primaryDarkColor">#1F515F</color>
-	<color name="accentColor">#03A9F4</color>
+	<!-- <color name="window_background">#FFF5F5F5</color> -->
+	<!-- <color name="primaryColor">#346D7D</color> -->
+	<!-- <color name="primaryDarkColor">#1F515F</color> -->
+	<!-- <color name="accentColor">#03A9F4</color> -->
 </resources>
 
 
