--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,11 @@
 
 	<!-- NavigationView theme -->
 	<style name="Base.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-		<item name="colorPrimary">@color/primaryColor</item>
-		<item name="colorPrimaryDark">@color/primaryDarkColor</item>
-		<item name="colorAccent">@color/accentColor</item>
+		<!-- <item name="colorPrimary">@color/primaryColor</item> -->
+		<!-- <item name="colorPrimaryDark">@color/primaryDarkColor</item> -->
+		<!-- <item name="colorAccent">@color/accentColor</item> -->
 
-		<item name="android:windowBackground">@color/window_background</item>
+		<!-- <item name="android:windowBackground">@color/background_fisiologico</item> -->
 	</style>
 
 
