--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -23,7 +23,7 @@
 		android:layout_alignTop="@+id/ic_fecha"
 		android:layout_toRightOf="@+id/ic_fecha"
 		android:layout_toEndOf="@+id/ic_fecha"
-		android:textStyle="bold|italic"
+		android:textStyle="italic"
 		android:layout_marginLeft="24dp"/>
 
 	<TextView
